[package]
name = "project-two"
version = "0.1.0"
authors = ["Jan Keith Darunday <jkdarunday@freedom.tm>"]

[dependencies]
iron="0.4"
router="0.2"
mount="0.2"
persistent="0.2"
urlencoded="0.4"

redis = "0.7"
r2d2="0.7"
r2d2_redis={ git = "https://github.com/sorccu/r2d2-redis.git" }

uuid ={ version="0.3", features=["v5"] }

rustc-serialize="0.3"
